src/objects/Client__c.object
<CustomObject>
    <fields>
        <fullName>Age_Entry_Date__c</fullName>
        <description>Store this date so you can increment ages automatically even when you have no actual birthdate.</description>
        <label>Age Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age_Group__c</fullName>
        <description>You can set this field manually, but if you enter age or birthdate a trigger fills this field automatically (and overrides your setting).</description>
        <inlineHelpText>You can set this field manually, but if you enter age or birthdate a trigger fills this field automatically (and overrides your setting).</inlineHelpText>
        <label>Age Group</label>
        <picklist>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Household__c</fullName>
        <label>Client Household</label>
        <referenceTo>Client_Household__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Client</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>